# cli-template-rust

./: Cargo.toml  README.md
.github/workflows/: lint.yml  release.yml  test.yml
benches/: hello_bench.rs
src/: lib.rs  main.rs
tests/: integration_test.rs
