[package]
name = "cli-template-rust"
version = "0.1.0"
edition = "2021"
description = "Production CLI template with Clap and Cargo"
license = "MIT"
rust-version = "1.70"

[[bin]]
name = "cli-template"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true

[profile.bench]
opt-level = 3
lto = true
